- added new HTML5 powered layout and administration backend (Thorsten)
- added configurable search relevance functionality (Gustavo Solt)
- added automatic translations with Google Translate (Gustavo Solt)
- added Twitter support (Thorsten, Thomas Zeithaml)
- added Facebook Like Button support (Thorsten)
- added attachment administration frontend (Anatoliy)
- updated bundled jQuery to version 1.4.4 (Thorsten)

Version 2.6.13 - 2011-01-
- 

Version 2.6.12 - 2010-12-13
- added experimental support for MariaDB (Thorsten)
- added empty LDAP configuration file as example (Thorsten)
- updated Arabic translation
- updated Dutch translation (Werner Helmich)
- updated French translation
- updated Norwegian Bokmål translation (harald@delelisten.no)
- fixed minor bugs (Thorsten, Gustavo Solt)

Version 2.6.11 - 2010-11-03
- fixed some bugs introduced with phpMyFAQ 2.6.10 (Thorsten)

Version 2.6.10 - 2010-11-02
- added several security enhancements (Thorsten)
- updated Chinese (Simplified) translation
- updated German translation (Thorsten)
- updated Portuguese translation (Fernando G. Monteiro)
- fixed minor bugs (Thorsten)

Version 2.6.9 - 2010-09-28
- fixed XSS vulnerability (Yam Mesicka, Thorsten)
- added Slovak translation (Tibor)
- added minor usability improvement in administration backend (Thorsten)
- fixed issue with embedded Google Analytics code (Thorsten)

Version 2.6.8 - 2010-08-31
- dropped Oracle database support (Thorsten)
- added new TinyMCE plugin for adding internal links by a suggest search (Thorsten)
- added basic HTML5 powered administration backend (Thorsten) 
- improved setup and update functionality (Thorsten, Bram)
- updated bundled TCPDF library to version 5.6.000 (Thorsten)
- updated bundled TinyMCE editor component to version 3.3.8 (Thorsten)
- updated bundled phpseclib to version 0.2.1 (Thorsten)
- updated Russian translation
- updated Portuguese translation
- fixed XML rendering issue (Thorsten)
- fixed many bugs (Thorsten, Bram)
    